[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "structlog", "coverage"]

[project]
name = "transmission-throttle"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6",
  "structlog>=24",
  "transmission-rpc>=4",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
trans-scheduler = "trans_sched.cli:main"